added docstrings to podcast scraping functions

--- a/podcast_scraper.ipynb
+++ b/podcast_scraper.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#import all required libraries\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.by import By\n",
     "from selenium.webdriver.support.ui import WebDriverWait\n",
@@ -36,6 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Use config file to log into Chartable\n",
     "from configparser import ConfigParser\n",
     "cfg = ConfigParser(interpolation=None) \n",
     "cfg.read('conf.ini')\n",
@@ -77,11 +79,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_podcast_ranks(num_ranks, platform):    \n",
+    "def get_podcast_ranks(num_ranks, platform): \n",
+    "    '''returns a csv file containing the podcast ranks for \n",
+    "    either Spotify or Apple.\n",
+    "    \n",
+    "    args:\n",
+    "    \n",
+    "    num_ranks: int, number of ranks to scrape. Must be <=250 for Apple and \n",
+    "    <=200 for Spotify.\n",
+    "    platform: str, specify whether to get rankings from Apple or Spotify.'''\n",
     "    platform = platform.lower()\n",
     "    \n",
     "    if not isinstance(num_ranks,int):\n",
@@ -279,11 +289,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_podcast_info(filename):\n",
+    "    '''writes a file containing stars, ratings, and episode dates\n",
+    "    for each podcast specified in filename arugment\n",
+    "    \n",
+    "    args:\n",
+    "    filename: str, filepath/filename of csv file returned from \n",
+    "    get_podcast_ranks function'''\n",
     "    driver = webdriver.Chrome(options=opts)\n",
     "    driver.get('https://www.chartable.com/sign_in')\n",
     "\n",
@@ -308,7 +324,7 @@
     "\n",
     "\n",
     "    #Transfer to the podcast page\n",
-    "    for url in chart100['url']:\n",
+    "    for url in chart_file['url']:\n",
     "        driver.get(url)\n",
     "\n",
     "        try:\n",
@@ -386,15 +402,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# try:\n",
-    "#     csv_file.close()\n",
-    "#     driver.close()\n",
-    "# except:\n",
-    "#     driver.close()"
+    "try:\n",
+    "    csv_file.close()\n",
+    "    driver.close()\n",
+    "except:\n",
+    "    driver.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All episode information scraped!\n"
+     ]
+    }
+   ],
+   "source": [
+    "get_podcast_info('spotify_100_ranks.csv')"
    ]
   },
   {
@@ -403,7 +436,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_podcast_info('spotify_100_ranks.csv')"
+    "get_podcast_ranks"
    ]
   }
  ],
